[workspace]
resolver = "2"
members = ["doppler", "examples", "program", "sdk"]

[workspace.package]
repository = "https://github.com/blueshift-gg/doppler"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
doppler = { path = "./doppler" }
doppler-program = { path = "./program" }
doppler-sdk = { path = "./sdk" }
mollusk-svm = { version = "0.13.4" }
mollusk-svm-bencher = { version = "0.13.4" }
serde = { version = "1.0.228" }
solana-account = { version = "3" }
solana-client = { version = "4" }
solana-clock = { version = "3" }
solana-compute-budget-interface = { version = "3" }
solana-hash = { version = "4" }
solana-instruction = { version = "3" }
solana-keypair = { version = "3" }
solana-program = { version = "4" }
solana-pubkey = { version = "4" }
solana-sdk-ids = { version = "3" }
solana-signer = { version = "3" }
solana-system-interface = { version = "3" }
solana-transaction = { version = "3" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
